# jerry_vectorDB

./: .gitignore  CMakeLists.txt  Makefile  README.md  azure-pipelines.yml  bindings.cpp  notes.txt  py_embed.py  try_hnsw.cpp  tt.cpp  vector_db.cpp  vector_db.h
.github/workflows/: test.yml
bindings/: pybind_wrapper.cpp
experiments/: .smartarray_weights  IdTracker_test.cpp  P_test.cpp  PlainVectorIndex.cpp  SmartArray2.h  old_Segment.h  p.cpp  smartarray_log.csv  test_align.cpp  test_memorypool.md  test_smartarray.cpp  test_tinymap.cpp  try_asyncrw.cpp  try_cache.cpp  try_cache2.cpp  try_index.cpp  try_lru.cpp  try_simd.cpp  try_simd.md  try_vec.cpp
include/: DataTypes.h  Distance.h
old_experiments/: HnswVectorIndex.cpp  TinyMap.h  benchmark_results.csv  old_Segment.cpp  old_SegmentEntry.h  try_concurrentqueue.cpp
src/: APIService.cpp  ActiveSegment.h  AppendableSegment.cpp  AppendableSegment.h  BackupTimer.h  BitmapIndex.h  Collection.cpp  Collection.h  CollectionContainer.cpp  CollectionContainer.h  CollectionInfo.h  Config.h  DB.cpp  DB.h  DataTypes.h  Distance.h  FilterMatrix.h  HnswIndex.h  HnswVectorIndex.cpp  IdTracker.cpp  IdTracker.h  IdTracker_test.cpp  ImmutableSegment.cpp  ImmutableSegment.h  IndexFlat.cpp  JsonConverters.h  LRUCache.h  MetaIndex.h  NamedVectors.h  PayloadStore.h  PlainVectorIndex.cpp  Point.h  PointMemoryPool.h  PointPayloadStore.cpp  PointPayloadStore.h  QueryResult.h  SearchLayout.md  Segment.cpp  Segment.h  SegmentEntry.h  (+17 more)
test/: Makefile  test_bitmapindex.cpp  test_tinymap.cpp
tests/: test1.py  test2.py  test_vector_db.py
(+41 files in other folders)
